# job-scrapper-py

./: README.md  main.py  pyproject.toml  scrapper.py
templates/: potato.html  report.html
