[tool.poetry]
name = "py-scrapper"
version = "0.1.0"
description = "job scrapper"
authors = ["Hojun Kim <76956067+hojunkim1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
